@@ -60,6 +60,10 @@ Major changes from 1.9.0-jumbo-1 (May 2019) in this bleeding-edge version:
   --format=#ipmi-opencl  will pick the RAKP-opencl format.  We already had
   the '@' symbol for searching in alorithm name.  [magnum; 2019]
 
+- Worked out a new KISS solution "FMT_BLOB" for non-hash formats, so they can
+  still benefit from same-salt optimizations/exploits.  [magnum; 2019]
+
+
 Major changes from 1.8.0-jumbo-1 (December 2014) to 1.9.0-jumbo-1 (May 2019):
 
 - Updated to 1.9.0 core, which brought the following relevant major changes:
